--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Splinter\n",
-    "executable_path = {'executable_path': 'chromedriver'}\n",
+    "executable_path = {'executable_path': '/Users/lucyly/Downloads/chromedriver'}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
